fix: incorrect file path to typography scss partial

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -29,7 +29,7 @@
 //    If using features such as custom properties, those that are global
 //    custom properties should be described in this section.
 @import "settings.variables.colors.scss";
-@import "settings.variables.typography.scss";
+@import "settings.typography.scss";
 
 // =====================================================================
 // 2. Tools
