chore: move documentation list to overview page

--- a/src/drizzle/pages/index.hbs
+++ b/src/drizzle/pages/index.hbs
@@ -14,3 +14,12 @@ layout: drizzle
   </li>
 {{/each}}
 </ul>
+
+<h2>Documentation</h2>
+<ul>
+{{#each (pages "system" sortby="order")}}
+  <li>
+    <a href="{{url}}">{{{data.title}}}</a>
+  </li>
+{{/each}}
+</ul>
