chore: add drizzle classes to table headers to left align text

--- a/src/drizzle/templates/drizzle/item.hbs
+++ b/src/drizzle/templates/drizzle/item.hbs
@@ -21,8 +21,8 @@
     <table style="width: 100%;">
       <thead>
         <tr>
-          <th width="20%">Attribute</th>
-          <th>Description</th>
+          <th class="drizzle-u-textLeft" width="20%">Attribute</th>
+          <th class="drizzle-u-textLeft">Description</th>
         </tr>
       </thead>
       <tbody>
