feat: add sample utility systems

--- a/src/drizzle/pages/system/utilities.hbs
+++ b/src/drizzle/pages/system/utilities.hbs
@@ -3,4 +3,31 @@ title: Utilities
 layout: drizzle
 ---
 
-<h1 class="heading_1">{{title}}</h1>
+<h1 class="heading-1">{{title}}</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Class</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code>.util-none</code></td>
+      <td>Sets an element to display none.</td>
+    </tr>
+    <tr>
+      <td><code>.util-block</code></td>
+      <td>Displays as a block element.</td>
+    </tr>
+    <tr>
+      <td><code>.util-inline</code></td>
+      <td>Displays as a inline element.</td>
+    </tr>
+    <tr>
+      <td><code>.util-inline-block</code></td>
+      <td>Displays as a inline-block element.</td>
+    </tr>
+  </tbody>
+</table>
