--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -57,6 +57,7 @@
 // 5. Objects
 //    Class-based selectors which define undecorated design patterns,
 //    for example media object known from OOCSS.
+@import "object.grid";
 
 
 // =====================================================================
