feat: facelift for design system interface
This adds a bunch of styles to make the interface of the design system a bit
prettier. This loads a couple fonts and adds some (easily customizable) colors.
This is meant to help differentiate between the contents of the system and the
interface of the system.

--- a/src/markup/layout/collection.hbs
+++ b/src/markup/layout/collection.hbs
@@ -1,13 +1,14 @@
----
-title: Components
----
-
 {{#extend "drizzle"}}
   {{#content "main"}}
-    <h1 class="drizzle-u-capitalize">{{name}}</h1>
+    <h1 class="drizzle-collection-heading drizzle-u-capitalize">
+      <span class="drizzle-collection-heading__sub">Components/</span>
+      <span class="drizzle-collection-heading__text">{{name}}</span>
+    </h1>
 
     {{#if notes}}
-      {{{markdown notes}}}
+      <div class="drizzle-p">
+        {{{markdown notes}}}
+      </div>
     {{/if}}
     
 
