--- a/src/markup/pages/index.hbs
+++ b/src/markup/pages/index.hbs
@@ -1,10 +1,14 @@
 ---
+title: Home
 layout: drizzle
+main-class: drizzle-white-bg
 ---
 
-<h1>{{data "global.companyName"}} Design System</h1>
+<h1 class="drizzle-heading-1">{{data "global.companyName"}} Design System</h1>
 
-<h2>Demo Pages</h2>
+<p class="drizzle-p u-margin-bottom-xl">This UI toolkit is a highly-modular design system for rapid web page development. It contains different materials that can be assembled into more complex page layouts. It includes working examples, code snippets and documentation.</p>
+
+<h2 class="drizzle-heading-2">Demo Pages</h2>
 <div class="u-margin-bottom-lg">
   <ul>
     {{#each (pages "demos" sortby="order")}}
