--- a/src/markup/patterns/components/buttons/btn-with-icon.hbs
+++ b/src/markup/patterns/components/buttons/btn-with-icon.hbs
@@ -1,5 +1,5 @@
 ---
-name: Btn (with Icon)
+name: Button (with Icon)
 order: 5
 notes: |
   Icons can be added to buttons by using the [SVG sprite sheet](/svg/symbol/sprite.symbol.html)
