feat: markup for expandable-content component

--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -27,6 +27,10 @@
 
     &--flip-when-expanded {
       display: inline-block;
+
+      .no-js & {
+        display: none;
+      }
     }
 
     [aria-expanded="true"] > &--flip-when-expanded {
