refactor: move colors to dedicated file
This makes it easier to swap out the ugly starting colors.

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -29,6 +29,7 @@
 //    If using features such as custom properties, those that are global
 //    custom properties should be described in this section.
 @import "settings/variables";
+@import "settings/colors";
 @import "settings/fonts";
 @import "settings/z-index";
 
