fix: stylelint errors

--- a/src/markup/patterns/drizzle/partials/item.hbs
+++ b/src/markup/patterns/drizzle/partials/item.hbs
@@ -6,7 +6,7 @@ hidden: true
 <div class="drizzle-Item drizzle-u-rhythm">
   {{!-- Header, labels --}}
   <div class="drizzle-u-marginEnds">
-    {{#> drizzle.labelheader tag="h2" id=(toSlug name) labels=data.labels}}
+    {{#> drizzle.labelheader tag="h2" id="(toSlug name)-pattern" labels=data.labels}}
       <h2 class="" id="{{toSlug name}}">
         <a href="#{{toSlug name}}">
           {{name}}
