--- a/src/markup/patterns/drizzle/partials/sidebar.hbs
+++ b/src/markup/patterns/drizzle/partials/sidebar.hbs
@@ -1,3 +1,6 @@
+---
+hidden: true
+---
 {{#*inline "nav-item"}}
   <a class="drizzle-Nav-item" href="{{@root.baseurl}}/{{url}}">{{label}}</a>
 {{/inline}}
