--- a/src/markup/layout/drizzle.hbs
+++ b/src/markup/layout/drizzle.hbs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{title}}{{name}}</title>
+    <title>{{title}} | {{data "global.companyName"}} Design System</title>
 
     {{> patterns.drizzle.partials.stylesheet-link-tags}}
   </head>
