--- a/src/scss/design-system-interface.scss
+++ b/src/scss/design-system-interface.scss
@@ -22,11 +22,8 @@
 }
 
 .drizzle-variant-button {
-  background-color: transparent;
-  color: inherit;
   border: none;
   margin: 0;
-  padding: 0;
   text-align: inherit;
   font: inherit;
   border-radius: 0;
@@ -35,7 +32,7 @@
   display: block;
   background: #ededed;
   color: #4c4c4c;
-  padding: 0em 0.5em;
+  padding: 0 0.5em;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 0.7em;
