feat: nicer typography for documentation pages

--- a/src/markup/layout/page.hbs
+++ b/src/markup/layout/page.hbs
@@ -8,7 +8,7 @@
 
   <title>{{ title }}</title>
 
-  <link href="/css/base.css" rel="stylesheet">
+  {{> patterns.drizzle.partials.stylesheet-link-tags}}
 </head>
 <body class="{{body-class}}">
   <a class="c-btn c-btn--primary c-skip-to-content" href="#main-content">Skip to main content</a>
