--- a/src/markup/pages/documentation/grid.hbs
+++ b/src/markup/pages/documentation/grid.hbs
@@ -3,13 +3,13 @@ title: Grid
 layout: drizzle
 ---
 
-<h1>{{title}}</h1>
+<h1 class="drizzle-heading-1">{{title}}</h1>
 
-<p>The grid system we are using for page layouts is based on a 12 column grid with 20px gutters between each column. Grid classes can be nested if needed for more complex layouts.</p>
+<p class="drizzle-p">The grid system we are using for page layouts is based on a 12 column grid with 20px gutters between each column. Grid classes can be nested if needed for more complex layouts.</p>
 
-<h2>Simple Grid</h2>
+<h2 class="drizzle-heading-2">Simple Grid</h2>
 
-<p>Most grid layouts are going to use either a two, three, or four column layout. The basic grid system includes all of the classes needed to create a simple layout with class names that are spelled out and easy to read.</p>
+<p class="drizzle-p">Most grid layouts are going to use either a two, three, or four column layout. The basic grid system includes all of the classes needed to create a simple layout with class names that are spelled out and easy to read.</p>
 
 <div class="o-grid">
   <div class="o-grid__full drizzle-grid-example"></div>
@@ -94,9 +94,9 @@ layout: drizzle
   </tr>
 </table>
 
-<h2 class="c-heading-2 u-margin-top-xxl">Responsive Grid</h2>
+<h2 class="drizzle-heading-2 u-margin-top-xxl">Responsive Grid</h2>
 
-<p>To adjust a the width of a column at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the grid classes:</p>
+<p class="drizzle-p">To adjust a the width of a column at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the grid classes:</p>
 
 <div class="o-grid">
   <div class="o-grid__half o-grid__third@sm drizzle-grid-example"></div>
@@ -122,9 +122,9 @@ layout: drizzle
   </code>
 </pre>
 
-<h2 class="c-heading-2 u-margin-top-xxl">Extended Grid</h2>
+<h2 class="drizzle-heading-2 u-margin-top-xxl">Extended Grid</h2>
 
-<p>In addition to the simple grid system there is an extended grid system that allows for any combination of a 12 column grid system. The extended grid system can also be used responsively in the same way that as the gimple grid system.</p>
+<p class="drizzle-p">In addition to the simple grid system there is an extended grid system that allows for any combination of a 12 column grid system. The extended grid system can also be used responsively in the same way that as the gimple grid system.</p>
 
 
 <div class="o-grid">
