--- a/src/markup/pages/documentation/page-width.hbs
+++ b/src/markup/pages/documentation/page-width.hbs
@@ -4,24 +4,24 @@ layout: page
 ---
 
 <div class="o-width-limiter u-padding-top-xl u-margin-bottom-xxl">
-  <h1>{{title}}</h1>
+  <h1 class="drizzle-heading-1">{{title}}</h1>
 </div>
 
 <div class="u-margin-bottom-xxl">
-  <p>By default, text will touch the edge of the browser, like this.</p>
+  <p class="drizzle-p">By default, text will touch the edge of the browser, like this.</p>
 </div>
 
 <div class="o-width-limiter u-margin-bottom-xxl">
 
-  <p>The <code>o-width-limiter</code> object has two primary functions:</p>
+  <p class="drizzle-p">The <code>o-width-limiter</code> object has two primary functions:</p>
 
   <ol>
-    <li><strong>Apply horizontal padding to create a page margin.</strong> When the screen is small, this prevents text from touching the edge of the browser.</li>
-    <li><strong>Apply a max-width, and center the element when the max width is reached.</strong> When the screen is large, this element will be horizontally centered within its parent. This often means the element is centered within the whole page.</li>
+    <li class="drizzle-p"><strong>Apply horizontal padding to create a page margin.</strong> When the screen is small, this prevents text from touching the edge of the browser.</li>
+    <li class="drizzle-p"><strong>Apply a max-width, and center the element when the max width is reached.</strong> When the screen is large, this element will be horizontally centered within its parent. This often means the element is centered within the whole page.</li>
   </ol>
 
 </div>
 
 <div class="o-width-limiter o-width-limiter--no-page-margin u-margin-bottom-xxl">
-  <p>If you want to use a <code>o-width-limiter</code> but don't want the included page margin, add an additional <code>o-width-limiter--no-page-margin</code> modifier class.</p>
+  <p class="drizzle-p">If you want to use a <code>o-width-limiter</code> but don't want the included page margin, add an additional <code>o-width-limiter--no-page-margin</code> modifier class.</p>
 </div>
