feat: consistent grid & spacing example styles

--- a/src/markup/pages/documentation/spacing.hbs
+++ b/src/markup/pages/documentation/spacing.hbs
@@ -64,9 +64,9 @@ layout: drizzle
 <p class="drizzle-p">To adjust margin and padding at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the spacing classes:</p>
 
 <div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg" style="width: 100%; height: 100px; background: #0065A0;"></div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg" style="width: 100%; height: 100px; background: #0065A0;"></div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg" style="width: 100%; height: 100px; background: #0065A0;"></div>
+  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
+  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
+  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
