--- a/src/markup/pages/documentation/grid.hbs
+++ b/src/markup/pages/documentation/grid.hbs
@@ -12,25 +12,25 @@ layout: drizzle
 <p class="drizzle-p">Most grid layouts are going to use either a two, three, or four column layout. The basic grid system includes all of the classes needed to create a simple layout with class names that are spelled out and easy to read.</p>
 
 <div class="o-grid">
-  <div class="o-grid__full drizzle-grid-example"></div>
+  <div class="o-grid__full drizzle-example-block"></div>
 
-  <div class="o-grid__half drizzle-grid-example"></div>
-  <div class="o-grid__half drizzle-grid-example"></div>
+  <div class="o-grid__half drizzle-example-block"></div>
+  <div class="o-grid__half drizzle-example-block"></div>
 
-  <div class="o-grid__third drizzle-grid-example"></div>
-  <div class="o-grid__third drizzle-grid-example"></div>
-  <div class="o-grid__third drizzle-grid-example"></div>
+  <div class="o-grid__third drizzle-example-block"></div>
+  <div class="o-grid__third drizzle-example-block"></div>
+  <div class="o-grid__third drizzle-example-block"></div>
 
-  <div class="o-grid__quarter drizzle-grid-example"></div>
-  <div class="o-grid__quarter drizzle-grid-example"></div>
-  <div class="o-grid__quarter drizzle-grid-example"></div>
-  <div class="o-grid__quarter drizzle-grid-example"></div>
+  <div class="o-grid__quarter drizzle-example-block"></div>
+  <div class="o-grid__quarter drizzle-example-block"></div>
+  <div class="o-grid__quarter drizzle-example-block"></div>
+  <div class="o-grid__quarter drizzle-example-block"></div>
 
-  <div class="o-grid__third drizzle-grid-example"></div>
-  <div class="o-grid__two-third drizzle-grid-example"></div>
+  <div class="o-grid__third drizzle-example-block"></div>
+  <div class="o-grid__two-third drizzle-example-block"></div>
 
-  <div class="o-grid__quarter drizzle-grid-example"></div>
-  <div class="o-grid__three-quarter drizzle-grid-example"></div>
+  <div class="o-grid__quarter drizzle-example-block"></div>
+  <div class="o-grid__three-quarter drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
@@ -99,13 +99,13 @@ layout: drizzle
 <p class="drizzle-p">To adjust a the width of a column at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the grid classes:</p>
 
 <div class="o-grid">
-  <div class="o-grid__half o-grid__third@sm drizzle-grid-example"></div>
-  <div class="o-grid__half o-grid__third@sm drizzle-grid-example"></div>
-  <div class="o-grid__full o-grid__third@sm drizzle-grid-example"></div>
+  <div class="o-grid__half o-grid__third@sm drizzle-example-block"></div>
+  <div class="o-grid__half o-grid__third@sm drizzle-example-block"></div>
+  <div class="o-grid__full o-grid__third@sm drizzle-example-block"></div>
 
-  <div class="o-grid__full o-grid__quarter@md drizzle-grid-example"></div>
-  <div class="o-grid__full o-grid__half@md drizzle-grid-example"></div>
-  <div class="o-grid__full o-grid__quarter@md drizzle-grid-example"></div>
+  <div class="o-grid__full o-grid__quarter@md drizzle-example-block"></div>
+  <div class="o-grid__full o-grid__half@md drizzle-example-block"></div>
+  <div class="o-grid__full o-grid__quarter@md drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
@@ -128,23 +128,23 @@ layout: drizzle
 
 
 <div class="o-grid">
-  <div class="o-grid__1-12 drizzle-grid-example"></div>
-  <div class="o-grid__11-12 drizzle-grid-example"></div>
+  <div class="o-grid__1-12 drizzle-example-block"></div>
+  <div class="o-grid__11-12 drizzle-example-block"></div>
 
-  <div class="o-grid__2-12 drizzle-grid-example"></div>
-  <div class="o-grid__10-12 drizzle-grid-example"></div>
+  <div class="o-grid__2-12 drizzle-example-block"></div>
+  <div class="o-grid__10-12 drizzle-example-block"></div>
 
-  <div class="o-grid__3-12 drizzle-grid-example"></div>
-  <div class="o-grid__9-12 drizzle-grid-example"></div>
+  <div class="o-grid__3-12 drizzle-example-block"></div>
+  <div class="o-grid__9-12 drizzle-example-block"></div>
 
-  <div class="o-grid__4-12 drizzle-grid-example"></div>
-  <div class="o-grid__8-12 drizzle-grid-example"></div>
+  <div class="o-grid__4-12 drizzle-example-block"></div>
+  <div class="o-grid__8-12 drizzle-example-block"></div>
 
-  <div class="o-grid__5-12 drizzle-grid-example"></div>
-  <div class="o-grid__7-12 drizzle-grid-example"></div>
+  <div class="o-grid__5-12 drizzle-example-block"></div>
+  <div class="o-grid__7-12 drizzle-example-block"></div>
 
-  <div class="o-grid__6-12 drizzle-grid-example"></div>
-  <div class="o-grid__6-12 drizzle-grid-example"></div>
+  <div class="o-grid__6-12 drizzle-example-block"></div>
+  <div class="o-grid__6-12 drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
