--- a/src/scss/design-system-interface.scss
+++ b/src/scss/design-system-interface.scss
@@ -309,7 +309,7 @@ $c-pale: #F5F1F6;
   background-color: mix($c-base, $c-pale, 90%) !important;
 }
 
-.drizzle-grid-example {
+.drizzle-example-block {
   height: 100px;
   background: $c-base;
   box-shadow: inset 0 0 0 2px white;
