--- a/src/markup/patterns/drizzle/partials/item.hbs
+++ b/src/markup/patterns/drizzle/partials/item.hbs
@@ -120,7 +120,10 @@ hidden: true
     </div>
     {{!-- Code sample --}}
     {{#unless data.sourceless}}
-      <h3 class="drizzle-pattern__demo-box-title">HTML</h3>
+      <div class="drizzle-pattern__header">
+        <h3 class="drizzle-pattern__demo-box-title">HTML</h3>
+        <button class="drizzle-pattern__copy-button">copy</button>
+      </div>
       <pre class="drizzle-pattern__demo-box drizzle-pattern__demo-box--code"><code class="drizzle-pattern__source language-markup">{{{patternSource id @root}}}</code></pre>
     {{/unless}}
   </div>
