refactor: scss style

--- a/src/scss/design-system-interface.scss
+++ b/src/scss/design-system-interface.scss
@@ -238,15 +238,17 @@ $c-pale: #F5F1F6;
 
   &__copy-button::after {
     content: '👍';
-    position: absolute;
+
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #56485B;
+
+    background: $c-base;
     opacity: 0;
     transition: opacity 0.3s;
   }
